--- a/ativ01.html
+++ b/ativ01.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div id="anim" style="width: 928px; height: 228px; margin: 6% auto 4% auto; background-image: url('https://arquivos.cruzeirodosuleducacional.edu.br/criacao/logos_cruzeiro/img/logo_cruzeiro_online.png'); animation: danca2 1s ease 0s infinite alternate; animation-play-state: running;"></div>
-        <div id="anim" style="width: fit-content; margin: 14% auto; position: fixed; transform: translate(139%, -212%); animation: danca 0.8s ease 0s infinite alternate; animation-play-state: running;">
-            <h1 style="color: #00386c;;">Universidade Cruzeiro do Sul</h1>
+        <div id="anim" style="width: fit-content; margin: 14% auto; position: fixed; transform: translate(107%, -165%); animation: danca 0.8s ease 0s infinite alternate; animation-play-state: running;">
+            <h1 style="color: #00386c; width: fit-content; margin: auto;">Universidade Cruzeiro do Sul</h1>
             <table>
                 <tr>
                     <td>
@@ -27,10 +27,36 @@
                 </tr>
                 <tr>
                     <td>
-                        <p style="width: fit-content; margin: auto; color: #dfb156">Gasparzinho</p>
+                        <ol>
+                            <li style="margin: 0 34px 0 0; color: #bb8823">
+                                <p style="width: fit-content; margin: auto; color: #dfb156">Análise e Desenvolvimento de Sistemas</p>
+                            </li>
+                        </ol>
                     </td>
                     <td>
-                        <p style="width: fit-content; margin: auto; color: #dfb156">5929223224</p>
+                        <ul>
+                            <li style="margin: 0 34px 0 0; color: #bb8823">
+                                <p style="width: fit-content; margin: auto; color: #dfb156">Turno Noturno</p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <ol>
+                            <li style="visibility: hidden; height: 0px;"></li>
+                            <li style="margin: 0 34px 0 0; color: #bb8823">
+                                <p style="width: fit-content; margin: auto; color: #dfb156">São Paulo - SP</p>
+                            </li>
+                        </ol>
+                    </td>
+                    <td>
+                        <ul>
+                            <li style="visibility: hidden; height: 0px;"></li>
+                            <li style="margin: 0 34px 0 0; color: #bb8823">
+                                <p style="width: fit-content; margin: auto; color: #dfb156">Campus Paulista</p>
+                            </li>
+                        </ul>
                     </td>
                 </tr>
             </table>
